--- a/source/scss/_partial/normalize.scss
+++ b/source/scss/_partial/normalize.scss
@@ -46,6 +46,10 @@ summary {
   display: block;
 }
 
+article {
+  overflow: hidden;
+}
+
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
  * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
