--- a/source/scss/_partial/sidebar.scss
+++ b/source/scss/_partial/sidebar.scss
@@ -3,6 +3,7 @@
     margin-bottom: 25px;
     ul {
       list-style: none;
+      padding: 0;
     }
     .social-link {
       display: inline-block;
