--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -13,6 +13,9 @@ script.
 //- jQuery
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
 
+//- sticky.js
+script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.sticky/1.0.4/jquery.sticky.min.js")
+
 //- casual.js
 script(src="/js/casual.js")
 
