增加搜索功能，更新archive，tags页面

--- a/layout/about.jade
+++ b/layout/about.jade
@@ -3,6 +3,15 @@ extends partial/layout
 block site_title
   != page.title + " | " + config.title
 
+block header
+  include partial/header
+
 block content
   include mixins/post
   +post(page)
+
+block sidebar
+  include partial/sidebar
+  
+block copyright
+  include partial/footer
