--- a/source/scss/_partial/header.scss
+++ b/source/scss/_partial/header.scss
@@ -47,6 +47,7 @@
     }
   }
   .site-nav {
+    position: relative;
     height: 46px;
     background-color: #252626;
     .button-toggle {
@@ -114,5 +115,100 @@
     transition: opacity .4s;
     content: none;
     z-index: 9;
+  }
+
+  form#search-form {
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin-right: 10%;
+    input {
+      width: 150px;
+      border-color: transparent!important;
+      background-color: transparent!important;
+      padding: 0!important;
+      box-shadow: none!important;
+    }
+    span.fa-times {
+      display: none;
+      padding: 8px;
+      position: relative;
+      &:before {
+        position: absolute;
+        top: 10px;
+        left: 0;
+        width: 20px;
+        height: 1px;
+        background-color: #fff;
+        content: "";
+        transform-origin: center center 0;
+        transform: translate(0px, 6px) rotate(45deg);
+      }
+      &:after {
+        position: absolute;
+        top: 10px;
+        left: 0;
+        width: 20px;
+        height: 1px;
+        background-color: #fff;
+        content: "";
+        transform-origin: center center 0;
+        transform: translate(0px, 6px) rotate(-45deg);
+      }
+    }
+  }
+
+  div#local-search-result {
+    position: absolute;
+    width: calc(170px + 10%);
+    max-height: 600px;
+    overflow-y: scroll;
+    top: 46px;
+    right: 0;
+    background-color: #252626;
+    opacity: 0.75;
+    color: #ccc;
+    z-index: 999;
+    ul {
+      margin: 0;
+      padding: 0;
+    }
+    li {
+      list-style: none;
+      a.search-result-title {
+        display: inline;
+        color: #ccc;
+        border-bottom: 1px solid #bbb;
+      }
+      p.search-result {
+        line-height: 1.2rem;
+        max-height: 3.6rem;
+        font-size: 0.85rem;
+        color: #999;
+        padding-left: 1rem;
+        overflow: hidden;
+        em.search-keyword {
+          color: #e54e53;
+          text-decoration: underline;
+        }
+      }
+      &:hover {
+        background-color: #444
+      }
+    }
+  }
+  p.no-result {
+    position: absolute;
+    top: 46px;
+    right: 0;
+    display: none;
+    width: calc(170px + 10%);
+    background-color: #252626;
+    opacity: 0.75;
+    color: #ccc;
+    z-index: 999;
+    font-size: 0.85rem;
+    margin: 0;
+    padding: 0;
   }
 }
