--- a/layout/post.jade
+++ b/layout/post.jade
@@ -12,6 +12,11 @@ block header
     .site-nav
       span.button-toggle
       include partial/nav
+      form#search-form.nav-item
+        input(type="text" id="local-search-input" name="q" results="0" placeholder="search..." class="search form-control" autocomplete="off" autocorrect="off")
+        span.fa.fa-times(onclick="resetSearch()") 
+      div#local-search-result
+      p.no-result No results found
 
 block content
   include mixins/post
