更新锁定nav条位置代码

--- a/source/scss/_partial/header.scss
+++ b/source/scss/_partial/header.scss
@@ -50,6 +50,7 @@
     position: relative;
     height: 46px;
     background-color: #252626;
+    z-index: 999;
     .button-toggle {
       position: absolute;
       left: 20px;
