--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -13,13 +13,13 @@ script.
 //- jQuery
 script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js")
 
-//- sticky.js
-script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery.sticky/1.0.4/jquery.sticky.min.js")
+//- posfixed.js
+script(src="/js/posfixed.js")
 
 //- utils.js
 script(src="/js/utils.js")
 
-//- utils.js
+//- search.js
 script(src="/js/search.js")
 
 //- LaTex
