--- a/layout/partial/nav.jade
+++ b/layout/partial/nav.jade
@@ -4,4 +4,4 @@
     - var tar = re.test(value) ? "_blank" : "_self"
     .nav-item
       a(href=value target=tar)
-        != key.toUpperCase()
+        != __(key)
