更新简历页面侧栏部分

--- a/layout/partial/footer.jade
+++ b/layout/partial/footer.jade
@@ -6,7 +6,7 @@
   - year = year == theme.startyear ? year : theme.startyear + ' - ' + year;
   .container
     .col-6
-      .site-info © #{year} #[span.icon.icon] #[a(href=config.url)!= config.author]
+      .site-info © #{year} #[span.icon.icon-heart] #[a(href=config.url)!= config.author]
         span.sep /
         a(href=hexoURL, target="_blank") Powered by Hexo
         span.sep /
