--- a/source/scss/_partial/header.scss
+++ b/source/scss/_partial/header.scss
@@ -102,6 +102,11 @@
         background-color: #444;
       }
     }
+    a[data-text="resume"] {
+      color: #fee;
+      text-shadow: 0 -40px 100px, 0 0 2px, 0 0 1em #ff4444, 0 0 0.5em #ff4444, 0 0 0.1em #ff4444, 0 10px 3px #000;
+      animation: blink linear infinite 2s;
+    }
   }
 
   &:before {
