--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -32,3 +32,7 @@ if ga
     | (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;e=o.createElement(i);r=o.getElementsByTagName(i)[0];e.src='//www.google-analytics.com/analytics.js';r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));ga('create',
     != '"' + ga + '"'
     | ,'auto');ga('send','pageview');
+
+//- buttons.js
+<!-- Place this tag in your head or just before your close body tag. -->
+script(async defer src="https://buttons.github.io/buttons.js")
