add hexo-renderer-scss support

--- a/layout/partial/head.jade
+++ b/layout/partial/head.jade
@@ -9,7 +9,7 @@ block description
 
 meta(name="viewport", content="width=device-width, initial-scale=1")
 link(rel="short icon", href=url_for(theme.favicon))
-link(rel="stylesheet", href=url_for("css/casual.css"))
+link(rel="stylesheet", href=url_for("scss/casual.css"))
 link(rel="stylesheet", href=url_for("css/icon.css"))
 
 - var xml = config.url + '/atom.xml'
