--- a/source/scss/_partial/sidebar.scss
+++ b/source/scss/_partial/sidebar.scss
@@ -31,6 +31,9 @@
       .link-weibo {
         background-color: #dd4b39;
       }
+      .link-mail {
+        background-color: rgb(75, 191, 107);
+      }
     }
   }
   .widget {
