更新archive页样式

--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -26,7 +26,7 @@ mixin posts()
 
 //- Archive | Tags Page
 mixin postList()
-  .post-list
+  .article-post-list
     - var year = 0;
     - var change = false;
     - page.posts.each(function (item) {
@@ -36,16 +36,14 @@ mixin postList()
         if change 
           h2.archive-year!=year
         article.post-list-article
-          header.post-header.archives
-            .post-meta
-              span.post-date
-                != full_date(item.date, 'll')
-              span.post-tag
-                a(href= url_for(item.tags.toArray()[0].path))
-                  != item.tags.toArray()[0].name
-            h3.post-title
-              a(href= url_for(item.path))
-                != item.title
+          span.post-date
+            != full_date(item.date, 'MMMM Do')
+          span.post-title
+            a(href= url_for(item.path))
+              != item.title
+          span.post-tag
+            a(href= url_for(item.tags.toArray()[0].path))
+              != item.tags.toArray()[0].name
     - })
 
 //- Post Page
