--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -255,9 +255,77 @@ img.bgimage {
   }
 }
 
-.read-more {
-  float: right;
-  margin-right: 50px;
+.article-post-list {
+  margin-left: 8em;
+  margin-bottom: 2em;
+  .archive-year {
+    padding-left: 1em;
+    border-left: 5px solid #e54e53;
+    border-bottom: none;
+  }
+  .post-list-article {
+    position: relative;
+    margin-bottom: 0;
+    padding: 1em 0;
+    border-left: 2px solid #999;
+    overflow: visible;
+    &:hover {
+      .post-date,
+      .post-title:before {
+        background-color: #e54e53;
+      }
+      .post-date:before {
+        border-color: transparent transparent transparent #e54e53;
+      }
+      .post-title {
+        a {
+          color: #e54e53;
+          text-decoration: underline;
+        }
+      }
+    }
+  }
+  .post-date {
+    position: absolute;
+    top: 1em;
+    left: -9em;
+    width: 6em;
+    height: 30px;
+    line-height: 30px;
+    background-color: #666;
+    color: #FFF;
+    text-align: center;
+    &:before {
+      position: absolute;
+      top: 13px;
+      right: -12px;
+      width: 0;
+      height: 0;
+      border-color: transparent transparent transparent #666;
+      border-style: solid;
+      border-width: 0 0 15px 17px;
+      content: "";
+    }
+  }
+  .post-title {
+    position: relative;
+    margin-left: 2em;
+    font-weight: 400;
+    height: 30px;
+    line-height: 30px;
+    &:before {
+      position: absolute;
+      top: -0.2em;
+      left: -2.7em;
+      display: block;
+      width: 1em;
+      height: 1em;
+      border: 0.2em solid #fff;
+      border-radius: 50%;
+      background-color: #666;
+      content: "";
+    }
+  }
 }
 
 #mask {
