更新网页中文标题

--- a/layout/archive.jade
+++ b/layout/archive.jade
@@ -1,7 +1,7 @@
 extends partial/layout
 
 block site_title
-  != "ARCHIVE | " + config.title
+  != __('archive') + " | " + config.title
 
 block header
   header.site-header
