--- a/layout/resume.jade
+++ b/layout/resume.jade
@@ -1,7 +1,7 @@
 extends partial/layout
 
 block site_title
-  != page.title + " | " + config.title
+  != __('resume') + " | " + config.title
 
 block header
   include partial/header
