--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -256,74 +256,55 @@ img.bgimage {
 }
 
 .article-post-list {
-  margin-left: 8em;
   margin-bottom: 2em;
   .archive-year {
-    padding-left: 1em;
-    border-left: 5px solid #e54e53;
     border-bottom: none;
+    margin: 1em 0 0 0;
   }
   .post-list-article {
     position: relative;
-    margin-bottom: 0;
-    padding: 1em 0;
-    border-left: 2px solid #999;
+    margin: 0.2em 0;
     overflow: visible;
     &:hover {
-      .post-date,
-      .post-title:before {
-        background-color: #e54e53;
-      }
-      .post-date:before {
-        border-color: transparent transparent transparent #e54e53;
-      }
       .post-title {
         a {
-          color: #e54e53;
           text-decoration: underline;
         }
       }
     }
   }
   .post-date {
-    position: absolute;
-    top: 1em;
-    left: -9em;
+    position: relative;
+    display: inline-block;
+    padding-left: 1em;
     width: 6em;
-    height: 30px;
-    line-height: 30px;
-    background-color: #666;
-    color: #FFF;
-    text-align: center;
+    height: 1.5em;
+    line-height: 1.5em;
     &:before {
       position: absolute;
-      top: 13px;
-      right: -12px;
-      width: 0;
-      height: 0;
-      border-color: transparent transparent transparent #666;
-      border-style: solid;
-      border-width: 0 0 15px 17px;
+      top: 0.5em;
+      left: 0;
+      width: 0.4em;
+      height: 0.4em;
+      background-color: #666;
       content: "";
     }
   }
   .post-title {
     position: relative;
-    margin-left: 2em;
+    display: inline-block;
+    padding-left: 1em;
     font-weight: 400;
-    height: 30px;
-    line-height: 30px;
+    height: 1.5em;
+    line-height: 1.5em;
+    a {
+      color: #e54e53;
+    }
     &:before {
       position: absolute;
-      top: -0.2em;
-      left: -2.7em;
-      display: block;
-      width: 1em;
-      height: 1em;
-      border: 0.2em solid #fff;
-      border-radius: 50%;
-      background-color: #666;
-      content: "";
+      top: 0;
+      left: 0;
+      content: "»";
     }
   }
 }
