--- a/layout/partial/nav.jade
+++ b/layout/partial/nav.jade
@@ -7,5 +7,5 @@
         != __(key)
   if theme.resume
     .nav-item
-      a(href="/resume" target="_self" data-text="resume")
+      a(href="/resume" target="_blank" data-text="resume")
         != __('resume')
