--- a/layout/resume.jade
+++ b/layout/resume.jade
@@ -1,47 +1,27 @@
-extends partial/layout
+doctype
+html(lang=config.language)
+  head
+    meta(charset="utf-8")
+    meta(name="X-UA-Compatible", content="IE=edge")
+    title 
+      != __('resume') + " | " + config.title
+    meta(name="viewport", content="width=device-width, initial-scale=1")
+    link(rel="short icon", href=url_for(theme.favicon))
+    link(rel="stylesheet", href=url_for("scss/casual.css"))
+    link(rel="stylesheet", href=url_for("css/icon.css"))
+  body
+    .wrapper
+      .resume
+        .post-content.resume-content
+          != page.content
+        .right-sticky
+          ul
+            li
+              i.icon.icon-weixin
+              img(src=theme.weixin)
+            li
+              input(type="button" value="PDF" onclick="window.print()")
 
-block site_title
-  != __('resume') + " | " + config.title
-
-block header
-  include partial/header
-
-block content
-  .post
-    article.post-block
-      .post-content.resume-content
-        != page.content
-
-block sidebar
-  .widget
-    h3.widget-title Contact. 联系方式
-    .widget-content
-      ul
-        li 手机：18048580219
-        li Email：#[a(type="mailto" href="mailto:littlewin.wang@gmail.com") littlewin.wang@gmail.com]
-        li 微信：wxoffred
-
-  .widget
-    h3.widget-title Application. 应聘岗位
-    .widget-content
-      span 
-        != theme.application
-
-  .widget
-    h3.widget-title Tech. 技能点
-    .widget-content
-      ul
-        each value, key in theme.skill
-          li 
-            span.item 
-              != key
-            span.wrapper
-              span.inner(style="width: #{value}")
-        
-  .widget
-    .widget-content
-      p
-        != theme.introduction
-
-block copyright
-  include partial/footer
+//- buttons.js
+<!-- Place this tag in your head or just before your close body tag. -->
+script(async defer src="https://buttons.github.io/buttons.js")
