--- a/source/scss/casual.scss
+++ b/source/scss/casual.scss
@@ -7,6 +7,7 @@
 @import "_partial/footer";
 @import "_partial/mq";
 @import "_partial/sidebar";
+@import "_partial/resume";
 
 @font-face {
   font-family: 'sourcesanspro';
