--- a/source/scss/_partial/resume.scss
+++ b/source/scss/_partial/resume.scss
@@ -127,6 +127,9 @@
         border: none;
         background: transparent;
         color: #fff;
+        &:focus {
+          outline: none;
+        }
       }
       &:hover {
         img {
