--- a/source/scss/_partial/mq.scss
+++ b/source/scss/_partial/mq.scss
@@ -65,6 +65,18 @@
   }
 }
 
+@media screen and (max-width: 480px) {
+  .post-thumbnail {
+    display: none;
+  }
+  .post-header,
+  .post-excerpt {
+    margin-left: 0;
+  }
+}
+
+
+
 @media screen and (max-width: 360px) {
   .post-excerpt {
     display: none;
