评论切换到友言

--- a/layout/partial/comment.jade
+++ b/layout/partial/comment.jade
@@ -1,13 +1,5 @@
-if theme.cloud-tie
-  .cloud-tie-wrapper(id='cloud-tie-wrapper')
-  script.
-    var cloudTieConfig = {
-      url: document.location.href, 
-      sourceId: "",
-      productKey: "b3bab7bdfd4d4ac795cb0614a2cccf76",
-      target: "cloud-tie-wrapper"
-    };
-  script(src='https://img1.cache.netease.com/f2e/tie/yun/sdk/loader.js')
+if theme.uyan
+  div(id='uyan_frame')
 
 if theme.disqus
   #disqus_thread
