--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -13,6 +13,9 @@ script(src="/js/search.js")
 //- LaTex
 script(async src="//cdn.bootcss.com/mathjax/2.6.1/MathJax.js?config=TeX-MML-AM_CHTML")
 
+//- uyan
+script(type="text/javascript" src="http://v2.uyan.cc/code/uyan.js?uid=#{theme.uyan}")
+
 //- Analytics tracking
 - var ga = theme.ga
 if ga
